# cookiecutter-pypackage

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Pipfile  README.rst  cookiecutter.json  requirements_dev.txt  setup.cfg  tox.ini
docs/: conf.py  prompts.rst  pypi_release_checklist.rst  troubleshooting.rst  tutorial.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CONTRIBUTING.rst  Makefile  Pipfile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
