[bumpversion]
current_version = 0.5.10
commit = True
tag = True

[metadata]
name = "cookiecutter-pipenv"
url = "https://github.com/signed-log/cookiecutter-pipenv/"
license = "BSD"
license_files = file: LICENSE
description-file = README.rst
version = "0.10.1"
author = "Nicolas signed-log FORMICHELLA"
author_email = "stigpro@outlook.fr"
description = "Cookiecutter template made around Pipenv"

[options]
python_requires = >=3.7

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'
