[metadata]
name = '{{ cookiecutter.project_slug }}'
url = 'https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}'
version = '{{ cookiecutter.version }}'
description = '{{ cookiecutter.project_short_description }}'
keywords='{{ cookiecutter.project_slug }}'
long_description = file: README.rst, HISTORY.rst
long_description_content_type='text/x-rst'
{%- if cookiecutter.open_source_license != "Not open source" %}
license = '{{ cookiecutter.open_source_license }}'
license_files = file: LICENSE
{%- endif %}
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7

[options.data_files]
. = *.txt

[requirements-files]
install_requires = requirements.txt

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests*

[coverage:run]
parallel = true

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

{%- if cookiecutter.use_pytest == 'y' %}
[tool:pytest]
collect_ignore = ['setup.py']
{%- endif %}
